build/00013/GPIOhunt_esp32s3.log
Processing esp32s3 (board: esp32-s3-devkitc-1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (55.3.35) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting GPIOhunt.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.b12de62
Building in release mode
Compiling .pio/build/esp32s3/src/GPIOhunt.ino.cpp.o
In file included from .pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncHTTP.h:16,
                 from .pio/libdeps/esp32s3/H4Plugins/src/H4Plugins.h:9,
                 from /home/runner/work/h4plugins/h4plugins/build/esp32s3/src/GPIOhunt.ino:4:
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/GPIOhunt.ino: In function 'void h4pGlobalEventHandler(const std::string&, H4PE_TYPE, const std::string&)':
.pio/libdeps/esp32s3/H4Plugins/src/H4Service.h:416:38: error: 'onGPIO' was not declared in this scope
  416 | #define H4PEVENTCALL(e,s,m) H4PGLUE2(on,e)(s,m)
      |                                      ^~
.pio/libdeps/esp32s3/H4Plugins/src/H4Service.h:411:23: note: in definition of macro 'H4PGLUE2'
  411 | #define H4PGLUE2(x,y) x##y
      |                       ^
.pio/libdeps/esp32s3/H4Plugins/src/H4Service.h:458:5: note: in expansion of macro 'H4PEVENTCALL'
  458 |     H4PEVENTCALL(e,STOI(svc),STOI(msg)); \
      |     ^~~~~~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4Service.h:469:35: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_II'
  469 | #define H4P_FUNCTION_ADAPTER_GPIO H4P_FUNCTION_ADAPTER_II(GPIO)
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/GPIOhunt.ino:32:5: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_GPIO'
   32 |     H4P_FUNCTION_ADAPTER_GPIO;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
*** [.pio/build/esp32s3/src/GPIOhunt.ino.cpp.o] Error 1
========================== [FAILED] Took 9.35 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32s3        FAILED    00:00:09.345
==================== 1 failed, 0 succeeded in 00:00:09.345 ====================